--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1809,6 +1809,11 @@ messageDetails:
       thirdPart: " for more information."
     failing:
       details: "An error occurred while downloading the attachment. Retry or create a ticket"
+  banner:
+    content1: "Questo è un"
+    content2: "messaggio dinamico:"
+    content3: "il contenuto potrebbe cambiare nel tempo per darti informazioni aggiornate."
+    action: "Scopri di più"
 messagePDFPreview:
   title: "PDF Preview"
   singleBtn: "Save or share"
