feat: [IOCOM-698] Add bottom sheet to `RemoteContentBanner` component (#5298)
This PR depends on https://github.com/pagopa/io-app/pull/5294

## Short description
This PR adds bottom sheets to `RemoteContentBanner` component.

## List of changes proposed in this pull request
- updated the component `RemoteContentBanner` to display the bottom
sheet
- updated locales

## How to test
Using `io-dev-api-server` generate a message with remote content. Open
the message detail, tap on the link in the banner and check that the
bottom sheet is displayed.

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1814,6 +1814,9 @@ messageDetails:
     content2: "messaggio dinamico:"
     content3: "il contenuto potrebbe cambiare nel tempo per darti informazioni aggiornate."
     action: "Scopri di più"
+  bottomSheet:
+    title: "Cos'è un messaggio dinamico?"
+    body: "L'Ente mittente potrebbe aggiornare il contenuto di questo messaggio anche dopo l'invio, per assicurare che le informazioni siano sempre accurate e rilevanti.\n\n Questa operazione avviene in casi specifici, come l'aggiornamento di informazioni obsolete o di allegati non più validi.\n\n Se l'Ente deve invece comunicarti nuove informazioni o aggiornamenti importanti, lo farà tramite un nuovo messaggio."
 messagePDFPreview:
   title: "PDF Preview"
   singleBtn: "Save or share"
