--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -640,6 +640,22 @@ authentication:
     headerTitle: "Du hast keinen SPID?"
     contentTitle: "Was ist SPID?"
     subtitle: "SPID ist sicher"
+  opt-in:
+    contextualHelpTitle: "Authentifizierung"
+    contextualHelpContent: "Hier findest du Informationen darüber, wie du dich bei IO authentifizieren kannst, sowie einige Sicherheitstipps."
+    news: "Neu"
+    title: "Ab sofort kannst du schneller auf IO zugreifen"
+    identity-check: "Wir werden dich nur einmal im Jahr oder wenn du dich aus der App ausloggst auffordern, dich mit SPID oder CIE neu zu authentifizieren."
+    security-suggests: "Sicherheitstipps"
+    passcode: "Nach der ersten Anmeldung mit SPID oder CIE kannst du die App nur noch mit dem Entsperrcode oder biometrischen Daten öffnen."
+    notification: "Jedes Mal, wenn du dich über SPID oder CIE bei der App anmeldest, wirst du per E-Mail benachrichtigt."
+    button-accept-lv: "Ja, Schnellzugriff einrichten"
+    button-decline-lv: "Nein, ich möchte mich alle 30 Tage neu anmelden"
+    fingerprint: "Um IO zu öffnen benötigst du deinen Entsperrcode oder deine biometrischen Daten, teile sie mit niemanden."
+    io-logout: "Wenn du dieses Gerät verlierst, beende IO über"
+    io-lock-access: "Wenn du glaubst, dass deine SPID- oder CIE-Anmeldedaten kompromittiert wurden, blockiere den Zugriff auf IO über"
+    access-new-device: "Wenn du mit einem fremden Gerät auf IO zugreifst, denk daran, dich bei der App abzumelden."
+    io-site: "ioapp.it"
   idp_selection:
     headerTitle: "Home"
     contentTitle: "Wähle deinen Identitätsanbieter"
